--- a/layouts/partials/gallery.html
+++ b/layouts/partials/gallery.html
@@ -1,10 +1,10 @@
-<section class="gallery" id="work">
+<section class="gallery" id="featured">
   <div class="row">
 
     <!-- First 4 characters of each gallery page's unique ID -->
     {{ range where .Site.RegularPages "Section" "gallery" }}
       <!-- Scratch is used to set page-scoped variable outside of this loop-->
-      {{ .Scratch.Set "$modalID" (slicestr .UniqueID 0 4) }}
+      {{ .Scratch.Set "$modalID" (slicestr .File.UniqueID 0 4) }}
     {{ end }}
 
     {{ $galleryTotal := len (where .Site.RegularPages "Section" "gallery") }}
